# zendesk-mcp-server-custom

./: .dockerignore  .gitignore  DEPLOYMENT_README.md  DOCKER_README.md  Dockerfile  README.md  automate-swarm.sh  build-swarm.sh  check_load_balanced.sh  deploy-swarm.sh  deploy.sh  deploy_load_balanced.sh  docker-compose.yml  docker-stack.yml  entrypoint.sh  env.example  nginx.conf  pyproject.toml  run_and_loadenv.cmd  run_uvicorn.cmd  scale-swarm.sh  setup-swarm.sh  stop-swarm.sh  stop_load_balanced.sh  stop_simple_load_balanced.sh
mcp_zendesk/: __init__.py  server.py  test_zendesk.py
mcp_zendesk.egg-info/: PKG-INFO  SOURCES.txt
